// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputBarComponent Rendering Should not render actionIcon with text inside 1`] = `
<yoo-input-bar
  class="hydrated"
  data-yoo-input-bar-host=""
>
  
  <div
    attr-layout="column"
    class="outer-container"
    data-yoo-input-bar=""
  >
    
    <div
      attr-layout="row"
      class="input-container"
      data-yoo-input-bar=""
    >
      <div
        class="icon-container"
        data-yoo-input-bar=""
      >
        <div
          attr-layout="row"
          class="capture-icon"
          data-yoo-input-bar=""
        >
          <i
            class="yo-heart"
            data-yoo-input-bar=""
          />
        </div>
      </div>
      <div
        class="input-zone"
        data-yoo-input-bar=""
      >
        <textarea
          data-yoo-input-bar=""
          placeholder="salut"
          rows="1"
        />
        <div
          class="input-action"
          data-yoo-input-bar=""
        >
          <div
            data-yoo-input-bar=""
          >
            <span
              data-yoo-input-bar=""
            >
              <i
                class="yo-gallery"
                data-yoo-input-bar=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-input-bar>
`;

exports[`InputBarComponent Rendering Should render 1`] = `
<yoo-input-bar
  class="hydrated"
  data-yoo-input-bar-host=""
>
  
  <div
    attr-layout="column"
    class="outer-container"
    data-yoo-input-bar=""
  >
    
    <div
      attr-layout="row"
      class="input-container"
      data-yoo-input-bar=""
    >
      <div
        class="icon-container"
        data-yoo-input-bar=""
      >
        <div
          attr-layout="row"
          class="capture-icon"
          data-yoo-input-bar=""
        >
          <i
            class="yo-camera-solid"
            data-yoo-input-bar=""
          />
        </div>
      </div>
      <div
        class="input-zone"
        data-yoo-input-bar=""
      >
        <textarea
          data-yoo-input-bar=""
          placeholder="Add comment"
          rows="1"
        />
        <div
          class="input-action"
          data-yoo-input-bar=""
        >
          <div
            data-yoo-input-bar=""
          >
            <span
              data-yoo-input-bar=""
            >
              <i
                class="yo-gallery"
                data-yoo-input-bar=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-input-bar>
`;

exports[`InputBarComponent Rendering Should render with props 1`] = `
<yoo-input-bar
  class="hydrated"
  data-yoo-input-bar-host=""
>
  
  <div
    attr-layout="column"
    class="outer-container"
    data-yoo-input-bar=""
  >
    <div
      class="indications-container"
      data-yoo-input-bar=""
    >
      <span
        data-yoo-input-bar=""
      >
        Top Indication
      </span>
    </div>
    <div
      attr-layout="row"
      class="input-container"
      data-yoo-input-bar=""
    >
      <div
        class="icon-container"
        data-yoo-input-bar=""
      >
        <div
          attr-layout="row"
          class="capture-icon"
          data-yoo-input-bar=""
        >
          <i
            class="yo-heart"
            data-yoo-input-bar=""
          />
        </div>
      </div>
      <div
        class="input-zone"
        data-yoo-input-bar=""
      >
        <textarea
          data-yoo-input-bar=""
          placeholder="salut"
          rows="1"
        />
        <div
          class="input-action"
          data-yoo-input-bar=""
        >
          <div
            data-yoo-input-bar=""
          >
            <span
              data-yoo-input-bar=""
            >
              <i
                class="yo-gallery"
                data-yoo-input-bar=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-input-bar>
`;

exports[`InputBarComponent Rendering Should render with replyToUser 1`] = `
<yoo-input-bar
  class="hydrated"
  data-yoo-input-bar-host=""
>
  
  <div
    attr-layout="column"
    class="outer-container"
    data-yoo-input-bar=""
  >
    
    <div
      attr-layout="row"
      class="input-container"
      data-yoo-input-bar=""
    >
      <div
        class="icon-container"
        data-yoo-input-bar=""
      >
        <div
          attr-layout="row"
          class="capture-icon"
          data-yoo-input-bar=""
        >
          <i
            class="yo-camera-solid"
            data-yoo-input-bar=""
          />
        </div>
      </div>
      <div
        class="input-zone"
        data-yoo-input-bar=""
      >
        <textarea
          data-yoo-input-bar=""
          placeholder="Add comment"
          rows="1"
        />
        <div
          class="input-action"
          data-yoo-input-bar=""
        >
          <div
            data-yoo-input-bar=""
          >
            <span
              data-yoo-input-bar=""
            >
              <i
                class="yo-gallery"
                data-yoo-input-bar=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-input-bar>
`;
